--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@ h1,h4
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<title>Moving Rover On</title>
+	<title>CAR games</title>
 </head>
 <body onload="add()">
 <center>
 	<canvas id="myCanvas" width="800" height="600">
 
 	</canvas>
-<h1>racing game</h1>
+<h1>Racing games</h1>
 <h4>
-	<b class="text-danger">NOTE : </b> IF CARs IS NOT VISIABLE PRESS ANY ARROW KEY
+	<b class="text-danger">NOTE : </b> IF cars IS NOT VISIABLE PRESS ANY ARROW KEY
 </h4>
 
 </center>
